# OCR-Annotator

./: .sesskey  README.md  app.py  pyproject.toml  render.yaml
